Add media query

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <ul class="list-quote">
             <li>
               "I don’t hate it. I just don’t like it at all and it’s terrible."
-              —Michael Scott
+              - Michael Scott
               <span class="korean"
                 >"난 이걸 싫어하는게 아니야. 난 그냥 이걸 전혀 좋아하지 않고
                 이건 끔찍해"</span
@@ -38,7 +38,7 @@
               <span class="korean">"..라고 그녀가 말했지!"</span>
             </li>
             <li>
-              “Jim told me you could buy gaydar online.” — Dwight Schrute
+              “Jim told me you could buy gaydar online.” - Dwight Schrute
               <span class="korean"
                 >"짐이 온라인에서 게이다를 살 수 있다고 했어."</span
               >
